# smart-data-analyzer

./: .gitignore  README.md  app.py  backend.py  data_handler.py  pyproject.toml  simple_data.csv  snowflake_logic.sql  utils.py
aws/: __init__.py  aws_handler.py
data_analysis/: simple_data.csv
sample_files/: user_cell_lines.csv  your_cell_lines.csv  your_drugs.csv  your_results.csv
snow/: __init__.py  snow_handler.py
