[project]
name = "smart-data-analyzer"
version = "0.1.0"
description = "An application for easy data analysis"
authors = [
    {name = "Karolina Scigocka",email = "scigockakarolina@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
